# xPredicted

./: .gitignore  app.py  away_regressor.pkl  build_features.py  features.csv  fetch_training_data.py  home_regressor.pkl  investigate.py  outcome_classifier.pkl  prediction_engine.py  pyproject.toml  requirements-local.txt  requirements.txt  scaler.pkl  train_models.py  training_data.csv  validate_sources.py
.claude/: settings.local.json
static/: app.js  fixtures.html  fixtures.js  index.html  predictions.html  predictions.js  probabilities.html  probabilities.js  sitemap.xml  style.css
